--- a/indexStart.html
+++ b/indexStart.html
@@ -28,6 +28,6 @@
 
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        <script src="src/indexStart.js"></script>
+        <script src="src/indexStartV1.js"></script>
     </body>
 </html>
