Added some Bootstrap

--- a/indexStart.html
+++ b/indexStart.html
@@ -8,21 +8,23 @@
     </head>
     <body>
         <div class="container" id="board">
-            <div id="status">Next Player: X</div>
-            <div class="row">
-                <div id="0" name="square" class="col-xs-4 square">&nbsp;</div>
-                <div id="1" name="square" class="col-xs-4 square">&nbsp;</div>
-                <div id="2" name="square" class="col-xs-4 square">&nbsp;</div>
-            </div>
-            <div class="row">
-                <div id="3" name="square" class="col-xs-4 square">&nbsp;</div>
-                <div id="4" name="square" class="col-xs-4 square">&nbsp;</div>
-                <div id="5" name="square" class="col-xs-4 square">&nbsp;</div>
-            </div>
-            <div class="row">
-                <div id="6" name="square" class="col-xs-4 square">&nbsp;</div>
-                <div id="7" name="square" class="col-xs-4 square">&nbsp;</div>
-                <div id="8" name="square" class="col-xs-4 square">&nbsp;</div>
+            <div class="jumbotron">
+                <div class="bg bg-primary" id="status">Next Player: X</div>
+                <div class="row">
+                    <div id="0" name="square" class="col-xs-4 square">&nbsp;</div>
+                    <div id="1" name="square" class="col-xs-4 square">&nbsp;</div>
+                    <div id="2" name="square" class="col-xs-4 square">&nbsp;</div>
+                </div>
+                <div class="row">
+                    <div id="3" name="square" class="col-xs-4 square">&nbsp;</div>
+                    <div id="4" name="square" class="col-xs-4 square">&nbsp;</div>
+                    <div id="5" name="square" class="col-xs-4 square">&nbsp;</div>
+                </div>
+                <div class="row">
+                    <div id="6" name="square" class="col-xs-4 square">&nbsp;</div>
+                    <div id="7" name="square" class="col-xs-4 square">&nbsp;</div>
+                    <div id="8" name="square" class="col-xs-4 square">&nbsp;</div>
+                </div>
             </div>    
         </div><!-- /.board -->
 
